--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,11 @@
 body {
   background:url('https://images8.alphacoders.com/407/407586.jpg');
-  margin:0px;
   font-family: 'Ubuntu', sans-serif;
-	background-size: 100% 110%;
+  background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+}
 }
 h1, h2, h3, h4, h5, h6, a {
   margin:0; padding:0;
@@ -42,7 +45,7 @@ h1, h2, h3, h4, h5, h6, a {
   margin:5% auto;
   text-align:center;
 }
-.login input[type="email"],
+.login input[type="text"],
 .login input[type="password"] {
   max-width:400px;
 	width: 80%;
